examples/services/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    team: green
    service: backend
    version: v1
  name: backend
  namespace: green
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 4040
  selector:
    team: green
    service: backend
    version: v1
  type: ClusterIP
