examples/services/backend/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-infra-namespaces-to-backend
  namespace: green
  labels:
    service: backend
    version: v1
    team: green
spec:
  podSelector:
    matchLabels:
      service: backend
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          team: infra

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-backend
  namespace: green
  labels:
    service: backend
    version: v1
    team: green
spec:
  podSelector:
    matchLabels:
      service: backend
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          team: orange
    - podSelector:
        matchLabels:
          service: frontend
    ports:
    - protocol: TCP
      port: 4040
